feat: endpoint to get transactions by date
